test/Harper/Tests/Bad/DefiniteAssignment_IfElseIf.har
f :: Integer -> Integer;
f n = {
  var (x :: Integer);
  var (result :: Integer) = 0;
  
  if (n == 42) {
    x := n;

    // x is definitey assigned.
    
    result += x;
  }
  else if (n < 42) {
    x := 0;

    // x is definitely assigned.

    result += x;
  }

  // x is not definitely assigned.

  result += x + n;
  return result;
};

main :: Integer;
main = f 42;