test/Harper/Tests/Bad/DefiniteAssignment_IfElseIf.out
Error: variable `x` is not definitely assigned at point of use.
During evaluation of:
  x
Located at line 23 column 13

Execution terminated with an error: type error.